# yamulite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
yamulite/: __main__.py  api.py  auth.py  covers.py  player.py  settings.py  themes.py  workers.py
yamulite/ui/: detail.py  library.py  login.py  main_window.py  player_bar.py  search.py  settings_dialog.py  widgets.py
